--- a/src/main/resources/templates/employees/addEmployee.html
+++ b/src/main/resources/templates/employees/addEmployee.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+			xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragments/fragments :: head}"></head>
+<head th:replace="~{fragments/fragments :: common-head}"></head>
 
 <body>
 
@@ -27,70 +27,103 @@
 			<form method="post" th:action="@{/employees/add}" th:object="${employee}">
 				<div class="form-group">
 					<label for="username">Username:</label><br> <input class="form-control" id="username" name="username" placeholder="Username"
-					                                                   required="required"
-					                                                   th:field="*{username}" type="text"/>
+																														 required="required"
+																														 th:field="*{username}" type="text"/>
 				</div>
 				<div class="form-group">
 					<label for="firstName">First Name:</label><br> <input class="form-control" id="firstName" name="firstName" placeholder="First Name"
-					                                                      required="required"
-					                                                      th:field="*{firstName}" type="text"/>
+																																oninput="this.value = this.value.toUpperCase()"
+																																required="required"
+																																th:field="*{firstName}" type="text"/>
 				</div>
 				<div class="form-group">
 					<label for="lastName">Last Name:</label><br> <input class="form-control" id="lastName" name="lastName" placeholder="Last Name"
-					                                                    required="required"
-					                                                    th:field="*{lastName}" type="text"/>
+																															oninput="this.value = this.value.toUpperCase()"
+																															required="required"
+																															th:field="*{lastName}" type="text"/>
+				</div>
+				<div class="form-group">
+					<label for="designation">Designation:</label><br> <input class="form-control" id="designation" name="designation" placeholder="Designation"
+																																	 oninput="this.value = this.value.toUpperCase()"
+																																	 required="required"
+																																	 th:field="*{designation}" type="text"/>
 				</div>
 				<div class="form-group">
 					<label for="email">Email:</label><br> <input class="form-control" id="email" name="email" placeholder="Email"
-					                                                    required="required"
-					                                                    th:field="*{email}" type="email"/>
+																											 oninput="this.value = this.value.toUpperCase()"
+																											 required="required"
+																											 th:field="*{email}" type="email"/>
 				</div>
 				<div class="form-group">
 					<label for="phoneNumber">Phone Number:</label><br> <input class="form-control" id="phoneNumber" name="phoneNumber"
-					                                                          placeholder="Phone Number"
-					                                                          required="required"
-					                                                          th:field="*{phoneNumber}" type="tel"/>
+																																		placeholder="Phone Number"
+																																		required="required"
+																																		th:field="*{phoneNumber}" type="tel"/>
 				</div>
 				<div class="form-group">
 					<label for="dob">Date of Birth:</label><br> <input class="form-control" id="dob" name="dob"
-																																		placeholder="Date of Birth"
-																																		required="required"
-																																		th:field="*{dob}" type="date"/>
+																														 placeholder="Date of Birth"
+																														 required="required"
+																														 th:field="*{dob}" type="date"/>
 				</div>
 				<div class="form-group">
-					<label for="maritalStatus">Marital Status:</label><br> <input class="form-control" id="maritalStatus" name="maritalStatus"
-																																		placeholder="Marital Status"
-																																		required="required"
-																																		th:field="*{maritalStatus}" type="text"/>
+					<label for="gender">Gender:</label><br> <select class="form-control" id="gender" name="gender" placeholder="Gender"
+																													oninput="this.value = this.value.toUpperCase()"
+																													required="required"
+																													th:field="*{gender}" type="text">
+					<option value="SELECT GENDER" selected>--SELECT GENDER--</option>
+					<option value="MALE">MALE</option>
+					<option value="FEMALE">FEMALE</option>
+				</select>
+				</div>
+				<div class="form-group">
+					<label for="maritalStatus">Marital Status:</label><br> <select class="form-control" id="maritalStatus" name="maritalStatus"
+																																				 oninput="this.value = this.value.toUpperCase()"
+																																				 required="required"
+																																				 th:field="*{maritalStatus}" type="text">
+					<option value="SELECT MARITAL STATUS" selected>--SELECT MARITAL STATUS--</option>
+					<option value="SINGLE">SINGLE</option>
+					<option value="MARRIED">MARRIED</option>
+				</select>
 				</div>
 				<div class="form-group">
 					<label for="address">Address:</label><br> <input class="form-control" id="address" name="address"
-																																		placeholder="Address"
-																																		required="required"
-																																		th:field="*{address}" type="text"/>
+																													 oninput="this.value = this.value.toUpperCase()"
+																													 placeholder="Address"
+																													 required="required"
+																													 th:field="*{address}" type="text"/>
+				</div>
+				<div class="form-group">
+					<label for="pan">PAN:</label><br> <input class="form-control" id="pan" name="pan"
+																									 oninput="this.value = this.value.toUpperCase()"
+																									 placeholder="PAN"
+																									 required="required"
+																									 maxlength="10"
+																									 th:field="*{pan}" type="text"/>
 				</div>
 				<div class="form-group">
 					<label for="aadharCardNumber">Aadhar Card Number:</label><br> <input class="form-control" id="aadharCardNumber" name="aadharCardNumber"
-																																		placeholder="Aadhar Card Number"
-																																		required="required"
-																																		th:field="*{aadharCardNumber}" type="number"/>
+																																							 placeholder="Aadhar Card Number"
+																																							 required="required"
+																																							 maxlength="12"
+																																							 th:field="*{aadharCardNumber}" type="number"/>
 				</div>
 				<div class="form-group">
 					<label for="agreement">Agreement:</label><br> <input class="form-control" id="agreement" name="agreement"
-																																		placeholder="Agreement"
-																																		required="required"
-																																		th:field="*{agreement}" type="text"/>
+																															 placeholder="Agreement"
+																															 required="required"
+																															 th:field="*{agreement}" type="text"/>
 				</div>
 				<div class="form-group">
 					<label for="password">Password:</label><br> <input class="form-control" id="password" name="password" placeholder="Password"
-					                                                   required="required"
-					                                                   th:field="*{password}" type="password"/>
+																														 required="required"
+																														 th:field="*{password}" type="password"/>
 				</div>
 				<div class="form-group">
 					<label for="authorities">Authority:</label><br> <select class="form-control" id="authorities" name="authorities" required="required"
-					                                                        th:field="*{authorities}" multiple="multiple">
+																																	th:field="*{authorities}" multiple="multiple">
 					<option th:each="authority : ${availableAuthorities}" th:text="${authority.authority}"
-					        th:value="${authority.authorityId}"></option>
+									th:value="${authority.authorityId}"></option>
 				</select>
 				</div>
 				<button class="btn btn-primary" type="submit">Register Employee</button>
