--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -3,18 +3,57 @@
 			xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
 			xmlns:th="https://www.thymeleaf.org">
 
-<head th:fragment="head">
+<!-- head -->
+
+<head th:fragment="common-head">
 	<meta charset="UTF-8">
 	<meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
 	<title th:text="${title}">Title</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="icon" type="image/x-icon" th:href="@{/images/common/taxFM_logo.jpeg}">
 	<link rel="stylesheet" th:href="@{/css/common/common.css}">
 	<link rel="stylesheet" th:href="@{/css/common/media-queries.css}">
 	<link rel="stylesheet" th:href="@{/css/landing/index.css}">
 	<link rel="stylesheet" th:href="@{/css/home/home.css}">
 	<link rel="stylesheet" th:href="@{/css/employees/employees.css}">
+	<link rel="stylesheet" th:href="@{/css/employees/employee.css}">
 	<link rel="stylesheet" th:href="@{/css/customers/customers.css}">
+</head>
+
+<!-- profile head -->
+
+<head th:fragment="profile-head">
+	<meta charset="UTF-8">
+	<meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
+	<meta content="ie=edge" http-equiv="X-UA-Compatible">
+	<title th:text="${title}">Title</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+	<link rel="icon" type="image/x-icon" th:href="@{/images/common/taxFM_logo.jpeg}">
+	<link rel="stylesheet" th:href="@{/css/common/common.css}">
+	<link rel="stylesheet" th:href="@{/css/common/media-queries.css}">
+	<link rel="stylesheet" th:href="@{/css/landing/index.css}">
+	<link rel="stylesheet" th:href="@{/css/home/home.css}">
+	<link rel="stylesheet" th:href="@{/css/employees/employees.css}">
+	<link rel="stylesheet" th:href="@{/css/employees/employee.css}">
+	<link rel="stylesheet" th:href="@{/css/customers/customers.css}">
+</head>
+
+<!-- profile head -->
+
+<head th:fragment="services-head">
+	<meta charset="UTF-8">
+	<meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
+	<meta content="ie=edge" http-equiv="X-UA-Compatible">
+	<title th:text="${title}">Title</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+	<link rel="icon" type="image/x-icon" th:href="@{/images/common/taxFM_logo.jpeg}">
+	<link rel="stylesheet" th:href="@{/css/common/common.css}">
+	<link rel="stylesheet" th:href="@{/css/common/media-queries.css}">
+	<link rel="stylesheet" th:href="@{/css/landing/index.css}">
+	<link rel="stylesheet" th:href="@{/css/home/home.css}">
 </head>
 
 <!-- top banner -->
@@ -48,6 +87,25 @@
 			</ul>
 		</div>
 		<a class="nav-toggle hover-link" id="nav-toggle" th:href="@{/#}"> <i class="fa-solid fa-bars"></i> </a>
+	</div>
+</nav>
+
+<!-- services nav bar -->
+
+<nav th:fragment="services-nav-bar">
+	<div class="container main-nav flex">
+		<a class="company-logo" th:href="@{/home}" sec:authorize="isAuthenticated()"> <img alt="Company Logo" th:src="@{/images/common/taxFM_logo.jpeg}"></a>
+		<a class="company-logo" href="#home" sec:authorize="!isAuthenticated()"> <img th:alt="${topBannerCompanyName} + ' Logo'" th:src="@{/images/common/taxFM_logo.jpeg}"> </a>
+		<div class="nav-links" id="services-nav-links">
+			<ul class="flex">
+				<li><a class="hover-link" href="/#home" sec:authorize="!isAuthenticated()">Home</a></li>
+				<li><a class="hover-link" href="/#services" sec:authorize="!isAuthenticated()">Services</a></li>
+				<li><a class="hover-link" href="/#about" sec:authorize="!isAuthenticated()">About Us</a></li>
+				<li><a class="hover-link" href="/#team" sec:authorize="!isAuthenticated()">Our Team</a></li>
+				<li><a class="hover-link" href="/#career" sec:authorize="!isAuthenticated()">Career</a></li>
+				<li><a class="hover-link" href="/#contact" sec:authorize="!isAuthenticated()">Contact Us</a></li>
+			</ul>
+		</div>
 	</div>
 </nav>
 
