--- a/src/main/resources/templates/home/employee-dashboard.html
+++ b/src/main/resources/templates/home/employee-dashboard.html
@@ -3,7 +3,7 @@
 			xmlns:th="http://www.thymeleaf.org"
 			xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
-<head th:replace="~{fragments/fragments :: head}"></head>
+<head th:replace="~{fragments/fragments :: common-head}"></head>
 
 <body>
 <!-- top banner -->
