--- a/src/main/resources/templates/customers/customers.html
+++ b/src/main/resources/templates/customers/customers.html
@@ -78,29 +78,6 @@
 <!-- sub-footer -->
 
 <div th:replace="~{fragments/fragments :: sub-footer}"></div>
-<script>
-function filterCustomers() {
-    var input, filter, table, tr, td, i, txtValue;
-    input = document.getElementById("customerSearch");
-    table = document.querySelector(".customer__table__body table");
-    tr = table.getElementsByTagName("tr");
-    filter = input.value.toUpperCase();
-    for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName("td");
-        for (var j = 0; j < td.length; j++) {
-            var cell = td[j];
-            if (cell) {
-                txtValue = cell.textContent || cell.innerText;
-                if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                    tr[i].style.display = "";
-                    break;
-                } else {
-                    tr[i].style.display = "none";
-                }
-            }
-        }
-    }
-}
-</script>
+<script th:src="@{/js/customers/customers.js}"></script>
 </body>
 </html>
