--- a/src/main/resources/templates/landing/index.html
+++ b/src/main/resources/templates/landing/index.html
@@ -95,7 +95,7 @@
 		<div class="container">
 			<div class="services-header">
 				<h2 class="services-heading-text">Explore our wide range of services designed to meet your financial needs</h2>
-				<a class="primary-button" th:href="@{/services}">See all service pricing <i class="fa-solid fa-right-long"></i></a>
+				<a class="primary-button" th:href="@{/pricing}">See all service pricing <i class="fa-solid fa-right-long"></i></a>
 			</div>
 			<div class="services-area flex">
 				<div class="services-card flex">
