--- a/src/main/resources/templates/home/employee-profile.html
+++ b/src/main/resources/templates/home/employee-profile.html
@@ -158,7 +158,7 @@
 												<!-- Delete button on the right side, outside the anchor tag -->
 												<form th:action="@{/employees/{employeeId}/remove-customer(customerId=${customer.customerId}, employeeId=${employee.employeeId})}" method="post" class="col-2 text-right" style="display:inline;">
 													<button type="submit" class="btn btn-danger btn-sm"
-																	th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
+																	th:if="${#authorization.expression('hasAnyAuthority(''ADMIN'', ''SENIOR'')') and (employee.employeeId != currentEmployeeId)}">
 														<i class="fas fa-trash-alt"></i> Remove
 													</button>
 												</form>
@@ -200,95 +200,6 @@
 									<div class="modal-footer">
 										<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
 										<button type="submit" class="btn btn-primary">Assign</button>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-					
-					<!-- Subordinates Section -->
-					<!--	todo:	should not be visible for junior-->
-					<div class="row gutters-sm mt-4">
-						<div class="col-sm-12 mb-3">
-							<div class="card h-100">
-								<div class="card-body">
-									<h6 class="d-flex align-items-center mb-3">
-										<i class="fas fa-users text-info mr-2"></i>Subordinates<!-- Add Subordinate Button -->
-										<button class="btn btn-primary btn-sm ml-auto"
-														data-toggle="modal"
-														data-target="#addSubordinateModal"
-														th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
-											Add Subordinate
-										</button>
-									</h6>
-									
-									<!-- Subordinates List -->
-									<ul class="list-group">
-										<li th:each="subordinate : ${employee.subordinates}" class="list-group-item mb-3">
-											<div class="row align-items-center">
-												<div class="col-10">
-													<a th:href="@{/employees/{id}(id=${subordinate.employeeId})}"
-														 class="text-decoration-none">
-														<div class="d-flex align-items-center">
-															<img src="https://bootdey.com/img/Content/avatar/avatar7.png"
-																	 class="rounded-circle mr-3"
-																	 width="40"
-																	 alt="Subordinate">
-															<div>
-                                            <span class="font-weight-bold"
-																									th:text="${subordinate.firstName + ' ' + subordinate.lastName}"></span>
-																<br>
-																<small class="text-muted"
-																			 th:text="${subordinate.designation}"></small>
-															</div>
-														</div>
-													</a>
-												</div>
-												<div class="col-2 text-right">
-													<!-- Remove Subordinate Button -->
-													<form th:action="@{/employees/{employeeId}/subordinates/{subordinateId}/delete(employeeId=${employee.employeeId}, subordinateId=${subordinate.employeeId})}"
-																method="post">
-														<button type="submit" class="btn btn-danger btn-sm">
-															<i class="fas fa-trash-alt"></i>
-														</button>
-													</form>
-												</div>
-											</div>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					
-					<!-- Add Subordinate Modal -->
-					<div class="modal fade" id="addSubordinateModal" tabindex="-1" role="dialog" aria-labelledby="addSubordinateModalLabel" aria-hidden="true">
-						<div class="modal-dialog" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="addSubordinateModalLabel">Add Subordinate</h5>
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-										<span aria-hidden="true">&times;</span>
-									</button>
-								</div>
-								<!-- Add Subordinate Form -->
-								<form th:action="@{/employees/{employeeId}/subordinates(employeeId=${employee.employeeId})}" method="post">
-									<div class="modal-body">
-										<div class="form-group">
-											<label for="subordinateId">Select Employee</label>
-											<select class="form-control" id="subordinateId" name="subordinateId" required>
-												<option value="" disabled selected>Select an Employee</option>
-												<option th:each="emp : ${availableEmployees}"
-																th:value="${emp.employeeId}"
-																th:text="${emp.firstName + ' ' + emp.lastName + ' (' + emp.designation + ')'}"
-																th:disabled="${emp.employeeId == employee.employeeId}">
-												</option>
-											</select>
-										</div>
-									</div>
-									<div class="modal-footer">
-										<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-										<button type="submit" class="btn btn-primary">Add Subordinate</button>
 									</div>
 								</form>
 							</div>
